<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Myapp</string>
  <string name="edit_message">Enter a message</string>
  <string name="button_pin">Pin!</string>
  <string name="button_recent">Recent</string>
  <string name="button_near">Near</string>
  <string name="button_hot">Hot</string>
  <string name="button_feed">Feed</string>
  <string name="button_map">Map</string>
  <string name="action_settings">Settings</string>
  <string name="title_activity_main">MainActivity</string>
  <string name="login_header">Pins</string>
  <string name="username">Username:</string>
  <string name="password">Password:</string>
  <string name="login">Login</string>
  <string name="register">Register</string>
  <string name="filters">Filters</string>
  <string name="range">Range</string>
  <string name="logout">Logout</string>
  <string name="config_header">Settings</string>
  <string name="button_config">+</string>
  <string name="button_filter">F</string>
</resources>
