<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_margin="10dp">

  <TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="150dp"
    android:text="@string/login_header"
    android:textAppearance="?android:attr/textAppearanceLarge"
    />

  <TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/textView1"
    android:layout_marginTop="50dp"
    android:text="@string/username"
    />

  <EditText
    android:id="@+id/editUsername"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/textView2"
    android:layout_marginLeft="32dp"
    android:layout_toRightOf="@+id/textView2"
    android:ems="10"
    android:singleLine="true" >

    <requestFocus />
  </EditText>

  <TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/textView2"
    android:layout_below="@+id/textView2"
    android:layout_marginTop="38dp"
    android:text="@string/password"
    />

  <EditText
    android:id="@+id/editPassword"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/textView3"
    android:layout_alignLeft="@+id/editUsername"
    android:ems="10"
    android:inputType="textPassword" />
  <LinearLayout
    android:id="@+id/linearLayout1"
    android:layout_below="@+id/editPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:layout_centerHorizontal="true"
    android:orientation="horizontal" >
    <Button
      android:id="@+id/btn_login"
      android:layout_weight="1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:onClick="login"
      android:text="@string/login" />

    <Button
      android:id="@+id/btn_register"
      android:layout_weight="1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:onClick="register"
      android:text="@string/register" />
  </LinearLayout>


</RelativeLayout>